--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1></h1>
+        <figure>
+            <img src="" alt="">
+            <figcaption></figcaption>
+        </figure>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
