--- a/index.html
+++ b/index.html
@@ -1,20 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1></h1>
-        <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
-        </figure>
+      <h1>Título</h1>
     </header>
-    <main></main>
-    <footer></footer>
-</body>
+    <main>
+      <figure>
+          <picture>
+            <source src="./assets/img/Taza_cafe_cuchara.webp" type="image/webp">
+            <source src="./assets/img/Taza_cafe_cuchara.jpg" type="image/jpeg">
+            <img src="./assets/img/Taza_cafe_cuchara.jpg" alt="Taza de café" />
+          </picture>
+        <figcaption>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet
+          pretium eleifend viverra eu euismod etiam.
+        </figcaption>
+      </figure>
+      <figure>
+        <picture>
+            <source src="./assets/img/Capsula_cafe.webp" type="image/webp">
+            <source src="./assets/img/Capsula_cafe.jpg" type="image/jpeg">
+            <img src="./assets/img/Capsula_cafe.jpg" alt="Taza de café" />
+        </picture>
+        <figcaption>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet
+          pretium eleifend viverra eu euismod etiam.
+        </figcaption>
+      </figure>
+      <figure>
+        <picture>
+            <source src="./assets/img/Taza_cafe_fonzo_azul.webp" type="image/webp">
+            <source src="assets/img/Taza_cafe_fonzo_azul.jpg" type="image/jpeg">
+            <img src="assets/img/Taza_cafe_fonzo_azul.jpg" alt="Taza de café" />
+        </picture>
+        <figcaption>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet
+          pretium eleifend viverra eu euismod etiam.
+        </figcaption>
+      </figure>
+      <!-- -->
+      <h2>Título</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna
+        ullamcorper tellus elementum amet elementum quisque rhoncus. Sed nibh
+        enim lectus aliquam ante iaculis magna. Elementum, venenatis elementum
+        quam at quam. Amet neque nec nunc convallis sed diam. Tellus nunc, lacus
+        ipsum sit et in. Vel venenatis nec neque iaculis enim. Lectus elementum,
+        interdum nulla ultricies parturient felis. Sed bibendum vestibulum
+        tempor nulla. Velit viverra cursus elementum odio felis, enim malesuada
+        pulvinar. Morbi elit sagittis cursus sit sit amet gravida sed auctor.
+        Donec ultrices maecenas consectetur a, pellentesque dui at. Lacus
+        vivamus turpis fermentum hac vel mattis. Rhoncus ultrices sem duis non,
+        eget molestie. Nunc blandit varius tortor id vitae. Risus, ut consequat
+        vitae lectus est. Ornare id habitasse nulla fermentum lectus
+        sollicitudin vel. Phasellus amet viverra tristique orci at consequat
+        aliquam nulla. In proin nisl proin sed leo erat dui. Penatibus mus magna
+        volutpat erat pharetra in nec sed lorem. Cras lorem sed amet,
+        suspendisse ut. Mauris amet pulvinar arcu integer condimentum. Ornare id
+        turpis quam cras dui facilisi. Netus pellentesque ultricies purus sed
+        tincidunt phasellus. Pellentesque fringilla non eget consectetur pretium
+        erat convallis. Arcu potenti nascetur enim faucibus varius lectus diam
+        netus. Sagittis maecenas aliquet aliquet quis pretium, diam. In urna leo
+        in cursus tortor. Quis.
+      </p>
+      <hr />
+      <picture>
+        <a href="/assets/img/Taza_cafe_solo.jpg""><img src="./assets/img/Taza_cafe_solo.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_london.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_mac.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Tazas de cafe.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Vaso cafe.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_london.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_hoja.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Cafe_molido.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_mac.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_cuchara.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Cafe_molido.jpg" alt="" /></a>
+        <a href=""><img src="./assets/img/Taza_cafe_fonzo_azul.jpg" alt="" /></a>
+      </picture>
+    </main>
+    <footer>
+      <h6>&copy;Copyright 2021 - El Bar de PACO</h6>
+    </footer>
+  </body>
 </html>
